added support for Apple MIDI protocol via WIFI

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/esp32-idf-blemidi"]
 	path = submodules/esp32-idf-blemidi
 	url = https://github.com/midibox/esp32-idf-blemidi
+[submodule "submodules/esp32-idf-applemidi"]
+	path = submodules/esp32-idf-applemidi
+	url = https://github.com/midibox/esp32-idf-applemidi
