--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(COMPONENT_SRCS "mbhp_mf_ng.c")
+set(COMPONENT_SRCS "mbhp_mf_ng.c wifi.c console.c midi.c")
 set(COMPONENT_ADD_INCLUDEDIRS ".")
 
 register_component()
